@@ -14,6 +14,7 @@
 - add -e  option to edit spec file (Han Holl)
 - add generation verify directive to the spec file
 - add build testing and install testing
+- fix a bug if release change
 
 * Mon Oct  7 2002  <valery_reznic@users.sourceforge.net> 0.7.1
 - split the script for a more modular way
